--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,20 @@
 # 项目依赖
+
+# GUI 框架
+PyQt5>=5.15.0
+
+# 数据获取（同花顺数据源）
+akshare>=1.12.0
+
+# 数据处理
+pandas>=2.0.0
+numpy>=1.24.0
+
+# 图表绘制
+matplotlib>=3.7.0
+
+# 网络请求
+requests>=2.31.0
+
+# 其他工具
+python-dotenv>=1.0.0
